# Sash-WIndow-App

./: .env.example  .gitignore  GRAPHICS_ENHANCEMENTS.md  LICENSE  PHASE2_SUMMARY.md  README.md  calculations.py  database.py  drawings.py  export_excel.py  export_pdf.py  main.py  main_gui.py  models.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
gui_app/: main_gui.py
gui_app/backend/: __init__.py  calculations.py  database.py  drawings.py  export_excel.py  main.py  models.py
gui_app/graphics/: base_exporter.py  dimensioning.py  export_3d.py  export_dxf.py  export_gcode.py  export_png.py  export_svg.py  geometry.py  layers.py  nesting.py  preview.py  renderer.py  scene.py  viewer.py
gui_app/resources/: style.qss
sash-window-web/: README.md
sash-window-web/backend/: .env.example  requirements.txt
sash-window-web/backend/app/: main.py
sash-window-web/backend/app/api/: calculate.py  exports.py  schemas.py  utils.py
sash-window-web/backend/app/core/: models.py
sash-window-web/backend/app/graphics/: __init__.py  base_exporter.py  export_3d.py  export_dxf.py  export_gcode.py  export_png.py  export_svg.py  layers.py  nesting.py  preview.py  renderer.py  scene.py  viewer.py  workers.py
sash-window-web/backend/app/services/: database.py  drawings_service.py  pdf_service.py
sash-window-web/frontend/: index.html
sash-window-web/frontend/css/: styles.css
sash-window-web/frontend/js/: api.js  app.js  renderer.js  viewer.js
tests/: __init__.py  test_graphics.py
tests/graphics/: __init__.py  test_renderer.py
