[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sash-window-app"
version = "1.0.0"
description = "Professional Sash Window Design and Production Application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Skylon Elements"}
]
keywords = ["sash-window", "design", "production", "gui", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "PyQt6>=6.7.0",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.9.0",
    "ezdxf>=1.3.0",
]

[project.optional-dependencies]
database = ["supabase>=2.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.4.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
sash-window-app = "gui_app.main_gui:main"

[project.urls]
Homepage = "https://github.com/Piotr3009/Sash-WIndow-App"
Repository = "https://github.com/Piotr3009/Sash-WIndow-App"
Issues = "https://github.com/Piotr3009/Sash-WIndow-App/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gui_app*"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=gui_app --cov-report=term-missing"
